WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
89846
fill=freeze animations cannot be rewound
https://bugs.webkit.org/show_bug.cgi?id=89846
Summary
fill=freeze animations cannot be rewound
Philip Rogers
Reported
2012-06-24 20:00:47 PDT
Created
attachment 149226
[details]
Testcase If an SVG animation containing fill=freeze is rewound using setTimeout(), we fail to reset to the base animated value. Because of how we handle accumulating multiple animations, this can only be hit if there are at least 2 animations. See the attached testcase for an example.
Attachments
Testcase
(1.48 KB, text/html)
2012-06-24 20:00 PDT
,
Philip Rogers
no flags
Details
Fix rewinding of SVG animations
(4.44 KB, patch)
2012-06-24 20:16 PDT
,
Philip Rogers
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Philip Rogers
Comment 1
2012-06-24 20:16:31 PDT
Created
attachment 149228
[details]
Fix rewinding of SVG animations
Nikolas Zimmermann
Comment 2
2012-06-25 02:36:34 PDT
Comment on
attachment 149228
[details]
Fix rewinding of SVG animations Woha, great catch! r=me.
WebKit Review Bot
Comment 3
2012-06-25 03:31:22 PDT
Comment on
attachment 149228
[details]
Fix rewinding of SVG animations Clearing flags on attachment: 149228 Committed
r121146
: <
http://trac.webkit.org/changeset/121146
>
WebKit Review Bot
Comment 4
2012-06-25 03:31:26 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug